--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,20 +4,8 @@
 	border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
-@media (max-width: 920px) {
-	.header {
-		padding-left: 20px;
-	}
-}
-
 @media (max-width: 630px) {
 	.header {
 		padding: 30px 0;
-	}
-}
-
-@media (max-width: 920px) {
-	.header {
-		padding-left: 30px;
 	}
 }
