--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,4 @@
 .profile__info {
-	max-width: 360px;
 	display: flex;
 	flex-direction: column;
 	margin-left: 30px;
@@ -7,6 +6,14 @@
 
 @media (max-width: 780px) {
 	.profile__info {
+		align-items: center;
+		margin-left: 0;
+	}
+}
+
+@media (max-width: 425px) {
+	.profile__info {
+		max-width: 280px;
 		align-items: center;
 		margin-left: 0;
 	}
