--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,9 +3,16 @@
 	font-size: 42px;
 	font-weight: 500;
 	line-height: 1.2;
+	max-width: 380px;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
+}
+
+@media (max-width: 820px) {
+	.profile__name {
+		max-width: 340px;
+	}
 }
 
 @media (max-width: 780px) {
@@ -16,6 +23,7 @@
 
 @media (max-width: 425px) {
 	.profile__name {
+		max-width: 250px;
 		font-size: 27px;
 	}
 }
